add error responses and codes to form endpoint
